# freundlich_iast

./: README.MD  plot_binary.py  plot_ternary.py  pyproject.toml
data/: 2-Components.csv  3-Components.csv
